--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^4.1.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dotenv": "^0.1.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
